fix a chau - a danh oke

--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.css
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.css
@@ -1,6 +1,6 @@
 div.mr-0 {
   background-image: url("https://userscontent2.emaze.com/images/3fb92ced-e07c-43f9-a1e3-eed08d15eeca/611856779bb15f9361a0fa2865abd54b.jpeg") !important;
-  background-size: cover;
+  background-size: 100%;
   background-repeat: no-repeat;
   overflow-x: hidden;
 }
@@ -24,7 +24,7 @@ div.statistics.p-2.mx-auto {
 }
 
 button.btn.btn-secondary {
-  margin-left: 80px
+  margin-left: 50px
 }
 
 div.col-lg-9.mx-auto {
