--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-overview/statistic-overview.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-overview/statistic-overview.component.html
@@ -1,4 +1,4 @@
-<div class="statistics-overview">
+<div class="statistics">
   <div class="statistics p-2 mx-auto">
     <button class="pcx" routerLink="/admin/statistic-overview">Tổng hợp</button>
     <button class="pcx" routerLink="/admin/statistic-ticket">Thống kê vé</button>
@@ -6,8 +6,8 @@
     <button class="pcx" routerLink="/admin/statistic-customer-register">Thống kê số lượng khách hàng</button>
     <button class="pcx" (click)="openDialogTotalCarCustomer()">Thống kê số lượng xe của khách hàng</button>
   </div>
-  <div class="p-5 mr-0">
-    <div class="statistics-integrated row">
+  <div class="statistics-overview p-3 mx-auto">
+    <div class="row">
       <div class="col-lg-7 col-md-7 col-sm-7 col-xl-7 border">
         <div class="row">
           <div class="statistics col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-4">
@@ -17,9 +17,9 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-4">
-            <div>
-              <canvas id="canvas" style="position: relative"></canvas>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-2">
+            <div style="width: 105%">
+              <canvas id="canvas" style="position: relative;"></canvas>
             </div>
           </div>
         </div>
@@ -57,13 +57,13 @@
           </div>
         </div>
       </div>
-      <div class="row ml-1">
-        <div class="statistics col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-3">
-          <h5>Phiên Bản Hệ Thống</h5>
-          <div class="mt-3 mb-4">
-            <p>Phiên bản hiện tại v1.0.0. Cập nhập lần cuối 30.12.2020.</p>
-            <p>License By C0620G1!</p>
-          </div>
+    </div>
+    <div class="row border border-top-0">
+      <div class="statistics col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-3">
+        <h5>Phiên Bản Hệ Thống</h5>
+        <div class="mt-3 mb-4">
+          <p>Phiên bản hiện tại v1.0.0. Cập nhập lần cuối 30.12.2020.</p>
+          <p>License By C0620G1!</p>
         </div>
       </div>
     </div>
