--- a/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.html
+++ b/sprint2-frontend/src/app/app-admin/statistic/statistic-ticket/statistic-ticket.component.html
@@ -7,8 +7,8 @@
   </div>
   <div class="statistics bg-light">
     <form [formGroup]="formStatisticMemberCard" (ngSubmit)="openStatisticMemberCard()">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-2 ml-3 mb-3">
+      <div class="row p-3">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 mt-2 ml-3 mb-3 ">
 
           <mat-form-field class="mr-2">
             <mat-label>Thống kê (*)</mat-label>
