--- a/sprint2-frontend/src/app/app-employee/member-card/member-card-list/member-card-list.component.html
+++ b/sprint2-frontend/src/app/app-employee/member-card/member-card-list/member-card-list.component.html
@@ -33,7 +33,7 @@
         <tr>
 <!--          <th>Stt</th>-->
           <th>Biển số xe</th>
-          <th style="padding: 10px">Tên khách hàng</th>
+          <th>Tên khách hàng</th>
           <th>Loại thẻ</th>
           <th>Ngày bắt đầu</th>
           <th>Ngày kết thúc</th>
