--- a/sprint2-frontend/src/app/app-employee/member-card/member-card-list/member-card-list.component.css
+++ b/sprint2-frontend/src/app/app-employee/member-card/member-card-list/member-card-list.component.css
@@ -22,9 +22,9 @@ body {
 
 .table-responsive .table-wrapper {
   background: white;
-  padding: 20px 25px;
+  padding: 25px 30px;
   border-radius: 3px;
-  /*min-width: 1000px;*/
+  min-width: 900px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
 
@@ -79,17 +79,19 @@ body {
 
 .table-responsive table.table tr th, table.table tr td {
   border-color: #e9e9e9;
-  padding: 12px 15px;
+  padding: 12px 10px;
   vertical-align: middle;
-  /*font-size: 13px;*/
+  font-size: 14px;
 }
 
 table tr {
+  margin-left: 50px;
   font-size: 14px;
 }
 
 .table-responsive table.table th {
-  text-align: center !important;
+  /*text-align: center !important;*/
+  /*margin-right: 100px;*/
   /*width: 80px;*/
 }
 
