check quality project - can fix

--- a/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
+++ b/sprint2-frontend/src/app/shared/side-bar/side-bar.component.html
@@ -17,15 +17,15 @@
 			</h2>
 		</div>
 	</div>
-	<div class="card" *ngIf="role == 'ROLE_ADMIN' || role == 'ROLE_EMPLOYEE'">
-		<div class="card-header">
-			<h2 class="mb-0">
-        <a [routerLink]="['/admin/customer-list']">
-					<span><i class="fa fa-users"></i> Quản lý khách hàng</span>
-				</a>
-			</h2>
-		</div>
-	</div>
+<!--	<div class="card" *ngIf="role == 'ROLE_ADMIN' || role == 'ROLE_EMPLOYEE'">-->
+<!--		<div class="card-header">-->
+<!--			<h2 class="mb-0">-->
+<!--        <a [routerLink]="['/admin/customer-list']">-->
+<!--					<span><i class="fa fa-users"></i> Quản lý khách hàng</span>-->
+<!--				</a>-->
+<!--			</h2>-->
+<!--		</div>-->
+<!--	</div>-->
 	<div class="card" *ngIf="role == 'ROLE_EMPLOYEE'">
 		<div class="card-header" >
 			<h2 class="mb-0">
