--- a/sprint2-frontend/src/app/shared/nav-bar/nav-bar.component.html
+++ b/sprint2-frontend/src/app/shared/nav-bar/nav-bar.component.html
@@ -30,8 +30,8 @@
             <a href="#" class="dropdown-item" [routerLink]="['/employee/registered-car-management']">
               <span><i class="fa fa-car"></i> Quản lý xe đã đăng ký</span>
             </a>
-            <a href="#" class="dropdown-item" [routerLink]="['/employee/entry-management']">
-              <span><i class="fa fa-video-camera"></i> Quản lý xe vào/ra</span>
+            <a class="dropdown-item" [routerLink]="['/employee/entry-management']">
+              <span routerLink="/employee/entry-view"><i class="fa fa-video-camera"></i> Quản lý xe vào/ra</span>
             </a>
             <a href="#" class="dropdown-item" [routerLink]="['/employee/member-card-list']">
               <span><i class="fa fa-id-card-o"></i> Quản lý vé</span>
