--- a/sprint2-frontend/src/app/app-customer/change-password-user/confirm-email/confirm-email.component.html
+++ b/sprint2-frontend/src/app/app-customer/change-password-user/confirm-email/confirm-email.component.html
@@ -5,9 +5,9 @@
       <b>
         <hr>
       </b>
-      <p><b>Mã xác nhận được gửi tới email của bạn đó bạn thân mến <3</b></p>
+      <p><b>Mã xác nhận được gửi tới email của bạn đó bạn thân mến <span style="color: red;font-size: 45px">♥</span> </b></p>
       <br>
-      <br> v
+      <br>
       <p style="font-weight: bold">Vui Lòng Nhập Mã Xác Nhận<span class="sao">(*)</span>:</p>
       <div class="form-group">
         <input id="verify" type="text" class="form-control" formControlName="verificationCode" required="required">
