--- a/sprint2-frontend/src/app/app-employee/entry-management/slot-info/slot-info.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/slot-info/slot-info.component.html
@@ -55,5 +55,6 @@
         </mat-form-field>
       </div>
     </div>
+    <button (click)="getId(slotInfoForm.controls.id.value)">Lấy id chơi</button>
   </form>
 </div>
