--- a/sprint2-frontend/src/app/app-employee/member-card/member-card-create/member-card-create.component.html
+++ b/sprint2-frontend/src/app/app-employee/member-card/member-card-create/member-card-create.component.html
@@ -1,9 +1,9 @@
+<script src="member-card-create.component.ts"></script>
 <main>
   <div class="container-fluid">
     <h4 class="modal-title text-success ">THÊM MỚI THẺ THÀNH VIÊN</h4>
     <form class="mt-3 mb-5" [formGroup]="memberCardForm" (keydown)="keyDownFunction($event)">
-
-
+      {{id}}
       <div class="form-group px-3 d-flex justify-content-end">
         <label for="plateNumber" class="col-3 ml-3">Biển số xe<span class="text-danger"> *</span></label>
         <div class="col-9">
@@ -29,9 +29,9 @@
 
 
       <div class="form-group px-3 d-flex justify-content-end">
-          <label class="col-3 ml-3">Họ và tên<span class="text-danger"> *</span></label>
-          <div class="col-9">
-            <input class="form-control" type="text" formControlName="fullName">
+        <label class="col-3 ml-3">Họ và tên<span class="text-danger"> *</span></label>
+        <div class="col-9">
+          <input class="form-control" type="text" formControlName="fullName">
           <p class="text-danger"
              *ngIf="memberCardForm.get('fullName').hasError('required')
                                       && (memberCardForm.controls.fullName?.dirty
@@ -65,7 +65,7 @@
       <div class="form-group px-3 d-flex justify-content-end">
         <label class="col-3 ml-3">Ngày bất đầu<span class="text-danger"> *</span></label>
         <div class="col-9">
-          <mat-form-field  (change)="setEndDate()">
+          <mat-form-field (change)="setEndDate()">
             <input matInput [matDatepicker]="startPicker" (change)="setEndDate()"
                    [(ngModel)]="startDateInput" formControlName="startDate">
             <mat-datepicker-toggle matSuffix [for]="startPicker" (change)="setEndDate()"></mat-datepicker-toggle>
@@ -106,15 +106,15 @@
       <div class="form-group px-3 d-flex justify-content-end">
         <label class="col-3 ml-3">Vị trí<span class="text-danger"> *</span></label>
         <mat-form-field class="col-9">
-          <mat-label>Chọn vị trí</mat-label>
-          <input matInput formControlName="slotNumber">
-<!--            <mat-option *ngFor="let par of parkingSlotList" [value]="par.id">-->
-<!--                {{par.floor}} - {{par.slotNumber}}-->
-<!--            </mat-option>-->
+          <input matInput formControlName="slotNumber" [placeholder]="parkingSlotList ? '' : 'Click vào đây để chọn vị trí'"
+                 [value]="parkingSlotList ? parkingSlotList.floor + '-' + parkingSlotList.slotNumber :
+          ''"
+                 readonly style="border: none;outline: none" (click)="open.click()">
+          <mat-error *ngIf="memberCardForm.get('slotNumber').hasError('required')">Vui lòng chọn vị trí</mat-error>
         </mat-form-field>
 
       </div>
-      <button (click)="openMap()">Mở bản đồ</button>
+      <button (click)="openMap()" style="display: none" #open>Mở bản đồ</button>
 
       <div class="form-group px-3 d-flex justify-content-end">
         <label class="col-3 ml-3">Giá tiền<span class="text-danger"> *</span></label>
@@ -126,7 +126,7 @@
 
       <div class="modal-footer">
         <input type="button" (click)="close()" class="btn btn-secondary" data-dismiss="modal" value="Thoát">
-        <input type="submit" class="btn btn-success" [disabled]="memberCardForm.invalid"
+        <input type="submit" class="btn btn-success"
                (click)="createMemberCard()" value="Thêm">
       </div>
 
