--- a/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/entry-view/entry-view.component.html
@@ -8,7 +8,7 @@
           <h1>Xe vào</h1>
         </div>
         <div class="row">
-          <app-camera-management (sendCarInfor)="getCarInfor($event)" (reset)="reset()"></app-camera-management>
+          <app-camera-management (sendCarInfor)="getCarInfo($event)" (reset)="reset()"></app-camera-management>
         </div>
         <div class="row form-group mt-2">
           <div class="col-12">
@@ -24,14 +24,14 @@
           <h1>Xe ra</h1>
         </div>
         <div class="row">
-          <app-camera-management (sendCarInfor)="getCarInfor($event)" (reset)="reset()"></app-camera-management>
+          <app-camera-management (sendCarInfor)="getCarInfo($event)" (reset)="reset()"></app-camera-management>
         </div>
         <div class="row form-group mt-2">
           <div class="col-12">
-            <mat-form-field class="example-full-width">
-              <mat-label>Ngày giờ ra</mat-label>
-              <input matInput type="datetime-local" formControlName="exitDate" readonly tabindex="-1">
-            </mat-form-field>
+<!--            <mat-form-field class="example-full-width">-->
+<!--              <mat-label>Ngày giờ ra</mat-label>-->
+<!--              <input matInput type="datetime-local" formControlName="exitDate" readonly tabindex="-1">-->
+<!--            </mat-form-field>-->
           </div>
         </div>
       </div>
@@ -139,7 +139,10 @@
       </div>
     </div>
     <div class="row mt-2 d-flex justify-content-end">
-      <div class="col-3 d-flex justify-content-end">
+      <div class="col-5 d-flex justify-content-end">
+        <button type="button" class="btn btn-primary mr-1"
+                *ngIf="ticketForm.controls.endDate.value != null && invalidMemberCard"
+                (click)="extend()">Gia hạn</button>
         <button class="btn btn-primary mr-1">Vào bãi</button>
         <button type="button" class="btn btn-primary" (click)="checkout()">Rời bãi</button>
       </div>
