add description for parking map

--- a/sprint2-frontend/src/app/app-employee/entry-management/parking-map/parking-map.component.html
+++ b/sprint2-frontend/src/app/app-employee/entry-management/parking-map/parking-map.component.html
@@ -3,8 +3,11 @@
   <div class="row">
     <div class="col-12 border border-dark p-2">
       <div class="row mb-5">
-        <div class="col-6 d-flex justify-content-start">
+        <div class="col-3 d-flex justify-content-start">
           <span class="d-flex justify-content-center" id="entrance">Cửa vào</span>
+        </div>
+        <div class="col-8">
+          <img src="https://firebasestorage.googleapis.com/v0/b/sprint2-72d39.appspot.com/o/avatar%2Fannotate%20(1)_1610937349920?alt=media&token=3492a805-93a2-4bc1-a3f2-ebf12172b3e9" alt="">
         </div>
       </div>
       <!--      parking slots-->
